# duo

./: CMakeLists.txt  README.md
include/: duo.h
include/duo/: base.h  bool.h  bytearray.h  float.h  function.h  int.h  none.h  opcode.h  standart.h  std.h  string.h  table.h  type.h
src/: base.c  bool.c  bytearray.c  duo.c  float.c  function.c  int.c  lexer.c  lexer.h  lexer.l  main.c  none.c  parser.c  parser.h  parser.y  standart.c  std.c  string.c  table.c  type.c
